# MTFCalculator

./: .gitmodules  LICENSE  README.md  main.py  pyproject.toml  template_parameters.json
gui/: calculator.py  errors.py  excel.py  model.py  presenter.py  sql_queries.py  template_parameters.json  utils.py  view.py
src/gui/: constants.py  excel.py  presenter.py
