[project]

authors = [{name = "David Henry", email = "david.henry3@health.nsw.gov.au"}]
description = "Digital Radiography Modulation transfer function Analysis Module"
name = "drmam"
requires-python = ">=3.10, <=3.12"
version = "1.0.3"

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  "numpy",
  "numba",
  "pydicom",
  "xlwings",
  "tkinterdnd2",
  "customtkinter",
  "opencv-python",
  "scikit-learn",
  "scipy",
  "packaging",
  "pillow",
  "pylibjpeg",
  "pylibjpeg-libjpeg",
]

[tool.setuptools.packages.find]
include = ["mtf", "gui"]
where = ["."]

[project-urls]
"Homepage" = "https://github.com/dhen2714/MTFCalculator"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]
